test-cases/valid/reject/non_void_main.ul
void foo() {
    return;
}

int main() { // Should be void
    foo();
}
